feat: Overhaul snippets app into a multi-activity demo (#955)
* feat: Overhaul snippets app into a multi-activity demo

This commit transforms the snippets project from a single-activity example into a comprehensive, multi-activity demonstration app. It now serves as a catalog of Places SDK features, with separate, self-contained examples for both Java and Kotlin.

Key changes:

- **New App Structure**:
  - `KotlinMainActivity` is the new launcher, presenting a `RecyclerView` of available demos. A parallel `JavaMainActivity` is also included.
  - A `MainApplication` class now handles the centralized initialization of the Places SDK.
  - The app now supports an edge-to-edge display theme.

- **New Demo Activities**:
  - **Current Place**: Finds and displays a list of likely places near the user's current location, handling permission requests.
  - **Place Autocomplete**: Demonstrates the `AutocompleteSupportFragment`, the autocomplete intent, and programmatic predictions, with a toggle for location bias vs. restriction.
  - **Place Details**: Fetches and displays basic details for a specific Place ID.
  - **Place Photos**: Fetches and displays a photo and its attributions for a place.
  - **Places Icon**: Shows how to retrieve and display a place's icon mask and background color.
  - **Is Open**: Checks if a place is open, using both a `Place` object and a Place ID.

- **UI and Layouts**:
  - Added dedicated XML layouts for each new activity and for `RecyclerView` list items.
  - Implemented standard UI patterns with `MaterialToolbar`, `RecyclerView`, and `ConstraintLayout`.

- **Build & Dependency Updates**:
  - Upgraded Gradle to version 9.1.0.
  - Updated various AndroidX and Material Design library versions.
  - Added `core-ktx` dependency.

* feat: Upgrade Places SDK to 5.0.0

This commit upgrades the Places SDK for Android from version 4.4.1 to 5.0.0.

Key changes include:

- Updating all build.gradle.kts and libs.versions.toml files to use the new SDK version.