@@ -18,18 +18,18 @@ import android.app.Activity;
 import android.content.Intent;
 import android.os.Bundle;
 import android.util.Log;
-import android.widget.Toast;
+import android.view.MenuItem;
 
 import androidx.activity.result.ActivityResultLauncher;
 import androidx.activity.result.contract.ActivityResultContracts;
 import androidx.annotation.NonNull;
 import androidx.annotation.Nullable;
 import androidx.appcompat.app.AppCompatActivity;
+import androidx.core.view.WindowCompat;
 
 import com.google.android.gms.common.api.ApiException;
 import com.google.android.gms.common.api.Status;
 import com.google.android.gms.maps.model.LatLng;
-import com.google.android.libraries.places.api.Places;
 import com.google.android.libraries.places.api.model.AutocompletePrediction;
 import com.google.android.libraries.places.api.model.AutocompleteSessionToken;
 import com.google.android.libraries.places.api.model.Place;
@@ -42,34 +42,52 @@ import com.google.android.libraries.places.widget.AutocompleteSupportFragment;
 import com.google.android.libraries.places.widget.listener.PlaceSelectionListener;
 import com.google.android.libraries.places.widget.model.AutocompleteActivityMode;
 
-import java.util.ArrayList;
 import java.util.Arrays;
 import java.util.List;
 
-class PlaceAutocompleteActivity extends AppCompatActivity {
+import com.google.places.databinding.ActivityPlaceAutocompleteBinding;
+import com.google.places.kotlin.MainApplication;
 
+public class PlaceAutocompleteActivity extends AppCompatActivity {
     private static final String TAG = PlaceAutocompleteActivity.class.getSimpleName();
 
     private PlacesClient placesClient;
+    private ActivityPlaceAutocompleteBinding binding;
 
     @Override
     protected void onCreate(@Nullable Bundle savedInstanceState) {
         super.onCreate(savedInstanceState);
-        setContentView(R.layout.activity_main);
 
-        final String apiKey = BuildConfig.PLACES_API_KEY;
-        if (apiKey.equals("DEFAULT_API_KEY")) {
-            Toast.makeText(this, "PLACES_API_KEY has not been configured", Toast.LENGTH_SHORT).show();
-            finish();
-            return;
+        // Enable edge-to-edge display.
+        WindowCompat.setDecorFitsSystemWindows(getWindow(), false);
+
+        binding = ActivityPlaceAutocompleteBinding.inflate(getLayoutInflater());
+        setContentView(binding.getRoot());
+        setSupportActionBar(binding.toolbar);
+        if (getSupportActionBar() != null) {
+            getSupportActionBar().setDisplayHomeAsUpEnabled(true);
+            getSupportActionBar().setTitle(getTitle() + " (Java)");
         }
-        // [START maps_places_get_started]
-        // Initialize the SDK
-        Places.initialize(getApplicationContext(), apiKey);
 
-        // Create a new PlacesClient instance
-        PlacesClient placesClient = Places.createClient(this);
-        // [END maps_places_get_started]
+        placesClient = ((MainApplication) getApplication()).getPlacesClient();
+
+        binding.useRestrictionSwitch.setOnCheckedChangeListener(
+                (buttonView, isChecked) -> initAutocompleteSupportFragment()
+        );
+        initAutocompleteSupportFragment();
+        binding.autocompleteIntentButton.setOnClickListener(v -> startAutocompleteIntent());
+        binding.programmaticAutocompleteButton.setOnClickListener(
+                v -> programmaticPlacePredictions(binding.autocompleteQuery.getText().toString())
+        );
+    }
+
+    @Override
+    public boolean onOptionsItemSelected(MenuItem item) {
+        if (item.getItemId() == android.R.id.home) {
+            finish();
+            return true;
+        }
+        return super.onOptionsItemSelected(item);
     }
 
     private void initAutocompleteSupportFragment() {
@@ -79,52 +97,64 @@ class PlaceAutocompleteActivity extends AppCompatActivity {
                 getSupportFragmentManager().findFragmentById(R.id.autocomplete_fragment);
 
         // Specify the types of place data to return.
-        autocompleteFragment.setPlaceFields(Arrays.asList(Place.Field.ID, Place.Field.NAME));
+        assert autocompleteFragment != null;
+        autocompleteFragment.setPlaceFields(Arrays.asList(Place.Field.ID, Place.Field.DISPLAY_NAME, Place.Field.FORMATTED_ADDRESS));
 
         // Set up a PlaceSelectionListener to handle the response.
         autocompleteFragment.setOnPlaceSelectedListener(new PlaceSelectionListener() {
             @Override
             public void onPlaceSelected(@NonNull Place place) {
-                // TODO: Get info about the selected place.
-                Log.i(TAG, "Place: " + place.getName() + ", " + place.getId());
+                binding.autocompleteResult.setText(
+                        getString(
+                                R.string.place_selection,
+                                place.getDisplayName(),
+                                place.getId(),
+                                place.getFormattedAddress()
+                        )
+                );
+                Log.i(TAG, "Place: " + place.getDisplayName() + ", " + place.getId());
             }
 
 
             @Override
             public void onError(@NonNull Status status) {
-                // TODO: Handle the error.
-                Log.i(TAG, "An error occurred: " + status);
+                binding.autocompleteResult.setText(getString(R.string.an_error_occurred, status));
+                Log.e(TAG, "An error occurred: " + status);
             }
         });
         // [END maps_places_autocomplete_support_fragment]
 
-        // [START maps_places_autocomplete_location_bias]
-        autocompleteFragment.setLocationBias(RectangularBounds.newInstance(
-                new LatLng(-33.880490, 151.184363),
-                new LatLng(-33.858754, 151.229596)));
-        // [END maps_places_autocomplete_location_bias]
+        // Since we are reusing the AutocompleteSupportFragment, we need to remove the previous restrictions
+        autocompleteFragment.setLocationBias(null);
+        autocompleteFragment.setLocationRestriction(null);
 
-        // [START maps_places_autocomplete_location_restriction]
-        autocompleteFragment.setLocationRestriction(RectangularBounds.newInstance(
-                new LatLng(-33.880490, 151.184363),
-                new LatLng(-33.858754, 151.229596)));
-        // [END maps_places_autocomplete_location_restriction]
+        if (binding.useRestrictionSwitch.isChecked()) {
+            // [START maps_places_autocomplete_location_restriction]
+            autocompleteFragment.setLocationRestriction(
+                    RectangularBounds.newInstance(
+                        new LatLng(-33.880490, 151.184363),
+                        new LatLng(-33.858754, 151.229596)
+                    )
+            );
+            // [END maps_places_autocomplete_location_restriction]
+        } else {
+            // [START maps_places_autocomplete_location_bias]
+            autocompleteFragment.setLocationBias(
+                    RectangularBounds.newInstance(
+                            new LatLng(-33.880490, 151.184363),
+                            new LatLng(-33.858754, 151.229596)
+                    )
+            );
+            // [END maps_places_autocomplete_location_bias]
+        }
 
         // [START maps_places_autocomplete_type_filter]
-        autocompleteFragment.setTypesFilter(Arrays.asList(PlaceTypes.ADDRESS, PlaceTypes.ESTABLISHMENT));
+        autocompleteFragment.setTypesFilter(List.of(PlaceTypes.ESTABLISHMENT));
         // [END maps_places_autocomplete_type_filter]
 
         // [START maps_places_autocomplete_type_filter_multiple]
-        autocompleteFragment.setTypesFilter(Arrays.asList("landmark", "restaurant", "store"));
+        autocompleteFragment.setTypesFilter(List.of("landmark", "restaurant", "store"));
         // [END maps_places_autocomplete_type_filter_multiple]
-
-        List<Place.Field> fields = new ArrayList<>();
-        // [START maps_places_intent_type_filter]
-        Intent intent = new Autocomplete.IntentBuilder(
-                AutocompleteActivityMode.FULLSCREEN, fields)
-                .setTypesFilter(Arrays.asList(PlaceTypes.ADDRESS))
-                .build(this);
-        // [END maps_places_intent_type_filter]
 
         // [START maps_places_autocomplete_country_filter]
         autocompleteFragment.setCountries("AU", "NZ");
@@ -138,11 +168,14 @@ class PlaceAutocompleteActivity extends AppCompatActivity {
         // [END_EXCLUDE]
         // Set the fields to specify which types of place data to
         // return after the user has made a selection.
-        List<Place.Field> fields = Arrays.asList(Place.Field.ID, Place.Field.NAME);
+        List<Place.Field> fields = Arrays.asList(Place.Field.ID, Place.Field.DISPLAY_NAME, Place.Field.FORMATTED_ADDRESS);
 
         // Start the autocomplete intent.
+        // [START maps_places_intent_type_filter]
         Intent intent = new Autocomplete.IntentBuilder(AutocompleteActivityMode.FULLSCREEN, fields)
+                .setTypesFilter(List.of(PlaceTypes.ESTABLISHMENT))
                 .build(this);
+        // [END maps_places_intent_type_filter]
         startAutocomplete.launch(intent);
         // [END maps_places_autocomplete_intent]
     }
@@ -155,10 +188,19 @@ class PlaceAutocompleteActivity extends AppCompatActivity {
                     Intent intent = result.getData();
                     if (intent != null) {
                         Place place = Autocomplete.getPlaceFromIntent(intent);
-                        Log.i(TAG, "Place: ${place.getName()}, ${place.getId()}");
+                        binding.autocompleteResult.setText(
+                                getString(
+                                        R.string.place_selection,
+                                        place.getDisplayName(),
+                                        place.getId(),
+                                        place.getFormattedAddress()
+                                )
+                        );
+                        Log.i(TAG, "Place: " + place.getDisplayName() + ", " + place.getId());
                     }
                 } else if (result.getResultCode() == Activity.RESULT_CANCELED) {
                     // The user canceled the operation.
+                    binding.autocompleteResult.setText(R.string.user_canceled_autocomplete);
                     Log.i(TAG, "User canceled autocomplete");
                 }
             });
@@ -181,20 +223,23 @@ class PlaceAutocompleteActivity extends AppCompatActivity {
                 //.setLocationRestriction(bounds)
                 .setOrigin(new LatLng(-33.8749937, 151.2041382))
                 .setCountries("AU", "NZ")
-                .setTypesFilter(Arrays.asList(PlaceTypes.ADDRESS))
+                .setTypesFilter(List.of(PlaceTypes.ESTABLISHMENT))
                 .setSessionToken(token)
                 .setQuery(query)
                 .build();
 
         placesClient.findAutocompletePredictions(request).addOnSuccessListener((response) -> {
+            StringBuilder builder = new StringBuilder();
             for (AutocompletePrediction prediction : response.getAutocompletePredictions()) {
+                builder.append(prediction.getPrimaryText(null).toString()).append("\n");
                 Log.i(TAG, prediction.getPlaceId());
                 Log.i(TAG, prediction.getPrimaryText(null).toString());
             }
+            binding.autocompleteResult.setText(builder.toString());
         }).addOnFailureListener((exception) -> {
-            if (exception instanceof ApiException) {
-                ApiException apiException = (ApiException) exception;
+            if (exception instanceof ApiException apiException) {
                 Log.e(TAG, "Place not found: " + apiException.getStatusCode());
+                binding.autocompleteResult.setText(getString(R.string.place_not_found, apiException.getMessage()));
             }
         });
         // [END maps_places_programmatic_place_predictions]
